# grasp_pose_detector_ros

./: .gitignore  CMakeLists.txt  README.md
cfg/: hand_geometry_my.cfg  libtorch_classifier_params.cfg  python_classifier_params.cfg  ros_gpd_params.cfg  ros_gpd_pointnet_params.cfg
include/gpd_ros/: gpd_node.h  gpd_server.h  grasp_detection_pointnet.h  grasp_detection_pointnet_realsense.h  grasp_detection_server_pointnet_realsense.h  grasp_detection_yolo.h  grasp_messages.h  realsense2_viewer.h  test.h
launch/: gpd.launch  gpd.rviz  gpd_pointnet.launch  gpd_pointnet.rviz  gpd_pointnet_realsense.launch  gpd_pointnet_realsense.rviz  gpd_pointnet_realsense_server.launch  tf_test.launch
scripts/: get_grasps.py  get_grasps_client.py
src/gpd_ros/: gpd_node.cpp  gpd_server.cpp  grasp_detection_node.cpp  grasp_detection_pointnet.cpp  grasp_detection_pointnet_realsense.cpp  grasp_detection_server.cpp  grasp_detection_server_pointnet_realsense.cpp  grasp_detection_yolo.cpp  grasp_messages.cpp  grasp_plotter.cpp  test.cpp
